--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "license": "MIT",
   "author": "Matthias Giger",
   "repository": "github:tobua/synec",
-  "bin": "./index.js",
+  "bin": "./cli.js",
+  "main": "./index.js",
   "type": "module",
   "scripts": {
     "start": "tsc --watch",
     "release": "standard-version"
   },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false
+  },
   "devDependencies": {
+    "prettier": "^2.0.5",
     "standard-version": "^8.0.2"
+  },
+  "dependencies": {
+    "chokidar": "^3.4.1",
+    "pacote": "^11.1.10",
+    "schema-utils": "^2.7.0"
   }
 }
