--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "chokidar": "^3.4.1",
     "pacote": "^11.1.10",
-    "schema-utils": "^2.7.0"
+    "schema-utils": "^2.7.0",
+    "semver": "^7.3.2"
   }
 }
