--- a/package.json
+++ b/package.json
@@ -1,50 +1,59 @@
 {
   "name": "synec",
-  "version": "0.1.7",
   "description": "Test local npm packages in projects.",
+  "version": "0.1.7",
   "repository": "github:tobua/synec",
   "license": "MIT",
   "author": "Matthias Giger",
-  "type": "module",
-  "main": "./index.js",
-  "source": "./index.js",
-  "bin": "./cli/index.js",
-  "types": "./index.d.ts",
-  "files": [
-    "**/*.js"
-  ],
   "scripts": {
-    "postinstall": "node ./installation.js"
+    "test": "padua test"
+  },
+  "padua": {
+    "source": true
+  },
+  "dependencies": {
+    "chokidar": "^3.4.2",
+    "logua": "^2.1.1",
+    "parse-gitignore": "^1.0.1",
+    "schema-utils": "^3.0.0",
+    "semver": "^7.3.2"
+  },
+  "type": "module",
+  "main": "index.js",
+  "bin": "cli/index.js",
+  "source": "index.js",
+  "types": "index.d.ts",
+  "files": [
+    "**/*.js",
+    "index.d.ts",
+    "!test"
+  ],
+  "devDependencies": {
+    "padua": "^0.1.2",
+    "rimraf": "^3.0.2"
   },
   "prettier": "padua/configuration/.prettierrc.json",
   "eslintConfig": {
-    "extends": "./node_modules/padua/configuration/eslint.cjs"
+    "extends": "./node_modules/padua/configuration/eslint.cjs",
+    "rules": {
+      "import/extensions": [
+        2,
+        "always"
+      ]
+    }
   },
   "jest": {
-    "globals": {
-      "ts-jest": {
-        "tsConfig": "./node_modules/padua/configuration/tsconfig.json"
-      }
-    },
     "transform": {
-      "^.+\\.tsx?$": "ts-jest",
       "^.+\\.jsx?$": [
         "babel-jest",
         {
           "configFile": "./node_modules/padua/configuration/.babelrc"
         }
       ]
-    }
-  },
-  "dependencies": {
-    "chokidar": "^3.4.2",
-    "logua": "^2.1.1",
-    "parse-gitignore": "^1.0.1",
-    "schema-utils": "^2.7.1",
-    "semver": "^7.3.2"
-  },
-  "devDependencies": {
-    "padua": "0.0.9"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/cint"
+    ]
   },
   "engines": {
     "node": ">= 13.2.0"
