--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "source": true
   },
   "dependencies": {
-    "chokidar": "^3.4.2",
+    "check-dependencies": "^1.1.0",
+    "chokidar": "^3.4.3",
     "logua": "^2.1.1",
     "parse-gitignore": "^1.0.1",
     "schema-utils": "^3.0.0",
