test(jest): fix some jest issues and test installing several plugins

--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     }
   },
   "jest": {
+    "modulePathIgnorePatterns": [
+      "test/fixture"
+    ],
     "transform": {
       "^.+\\.jsx?$": [
         "babel-jest",
