--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "check-dependencies": "^1.1.0",
-    "chokidar": "^3.4.3",
+    "chokidar": "^3.5.1",
     "folder-hash": "^4.0.0",
-    "logua": "^2.1.2",
+    "logua": "^2.1.3",
     "parse-gitignore": "^1.0.1",
     "schema-utils": "^3.0.0",
     "semver": "^7.3.4",
@@ -33,7 +33,7 @@
     "index.d.ts"
   ],
   "devDependencies": {
-    "padua": "^0.2.1",
+    "padua": "^0.2.5",
     "rimraf": "^3.0.2"
   },
   "prettier": "padua/configuration/.prettierrc.json",
@@ -42,7 +42,7 @@
     "rules": {
       "import/extensions": [
         2,
-        "always"
+        "ignorePackages"
       ]
     }
   },
@@ -63,6 +63,6 @@
     ]
   },
   "engines": {
-    "node": ">= 13.2.0"
+    "node": ">= 14"
   }
 }
