--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "folder-hash": "^4.0.1",
     "logua": "^2.1.4",
     "parse-gitignore": "^1.0.1",
+    "rimraf": "^3.0.2",
     "schema-utils": "^3.0.0",
     "semver": "^7.3.5",
     "strip-ansi": "^7.0.0"
@@ -33,8 +34,7 @@
     "index.d.ts"
   ],
   "devDependencies": {
-    "padua": "^0.3.5",
-    "rimraf": "^3.0.2"
+    "padua": "^0.3.6"
   },
   "prettier": "padua/configuration/.prettierrc.json",
   "eslintConfig": {
