--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,11 +5,14 @@ on:
     branches: [ master ]
 
 jobs:
-  cypress:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-node@v2.1.5
+        with:
+          node-version: '14'
+          check-latest: true
       - name: 🧪 Test
         run: |
           npm install
