--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chokidar": "^3.5.2",
     "folder-hash": "^4.0.1",
     "logua": "^2.1.4",
+    "mem": "^9.0.1",
     "parse-gitignore": "^1.0.1",
     "rimraf": "^3.0.2",
     "schema-utils": "^3.1.1",
